--- a/css/style.css
+++ b/css/style.css
@@ -87,13 +87,12 @@ body {
     border: 2px solid var(--azul);
     color: var(--branco);
     border-radius: 8px;
-    width: 50%;
+    width: 250px;
     padding: 15px 0px;
     text-align: center;
     font-size: 1.5rem;
     font-weight: 600;
     text-decoration: none;
-
 }
 
 .apresentacao_conteudo_botoes a:hover {
